@@ -5,6 +5,8 @@ examples/ex3.pl
 examples/ex4.pl
 images/ex3.png
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -23,11 +25,11 @@ Prague.pm
 README
 share/prague-map.xml
 SIGNATURE
-t/Map-Tube-Prague/00-use.t
-t/Map-Tube-Prague/01-version.t
-t/Map-Tube-Prague/02-pod_coverage.t
-t/Map-Tube-Prague/03-pod.t
-t/Map-Tube-Prague/04-map.t
-t/Map-Tube-Prague/05-get_shortest_route.t
-t/Map-Tube-Prague/06-name.t
-t/Map-Tube-Prague/07-xml.t
+t/Map-Tube-Prague/01-use.t
+t/Map-Tube-Prague/02-version.t
+t/Map-Tube-Prague/03-map.t
+t/Map-Tube-Prague/04-get_shortest_route.t
+t/Map-Tube-Prague/05-name.t
+t/Map-Tube-Prague/06-xml.t
+xt/Map-Tube-Prague/01-pod_coverage.t
+xt/Map-Tube-Prague/02-pod.t
