@@ -8,11 +8,18 @@ use inc::Module::Install;
 # Definition.
 abstract 'Interface to the Prague Metro Map.';
 author 'Michal Spacek <skim@cpan.org>';
+author_requires 'English' => 0;
+author_requires 'File::Object' => 0.08;
+author_requires 'Test::More' => 0;
+author_requires 'Test::NoWarnings' => 0;
+author_requires 'Test::Pod' => 0;
+author_requires 'Test::Pod::Coverage' => 0;
 install_share 'share';
 license 'bsd';
 license 'artistic_2';
 name 'Map-Tube-Prague';
 readme_from 'Prague.pm';
+recursive_author_tests('xt');
 requires 'File::Share' => 0;
 requires 'Map::Tube' => '2.89';
 requires 'Moo' => 0;
@@ -24,12 +31,9 @@ resources 'homepage' => 'https://github.com/tupinek/Map-Tube-Prague';
 resources 'repository' => 'git://github.com/tupinek/Map-Tube-Prague';
 test_requires 'Encode' => 0;
 test_requires 'English' => 0;
-test_requires 'File::Object' => 0.08;
 test_requires 'Test::Map::Tube' => 0.07;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
-test_requires 'Test::Pod' => 0;
-test_requires 'Test::Pod::Coverage' => 0;
 tests_recursive;
 version '0.12';
 
