@@ -1,5 +1,6 @@
 0.12
  - Add example for print of metro lines to doc.
+ - Move author tests to xt/ directory.
  - Update Module::Install to 1.16 version.
 
 0.11 2015-04-06T23:22:54+02:00
